--- a/project_01/sources/style.css
+++ b/project_01/sources/style.css
@@ -307,3 +307,36 @@
 	line-height: 1.75em;
 	margin: 10px 0;
 }
+/* Services */
+.services {
+	width: 100%;
+	margin: 50px auto;
+	text-align: center
+}
+.services__title {
+	text-transform: uppercase;
+	color: #41525c;
+	margin: 50px auto;
+	font-size: 1.7em;
+}
+.services__item {
+	display: inline-block;
+	width: 295px;
+	margin: 0 20px;
+}
+.services-item__title {
+	text-transform: uppercase;
+	font-size: 22px;
+	color: #3070a8;
+	padding: 20px;
+}
+.services-item__image {
+	width: 130px;
+	height: 129px;
+}
+.services-item__text {
+	font-family: "Open Sans", sans-serif;
+	font-size: 14px;
+	line-height: 20px;
+	color: #999;
+}
