--- a/project_01/sources/style.css
+++ b/project_01/sources/style.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Josefin+Sans:300);
 @import url(https://fonts.googleapis.com/css?family=Hind:700,400);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400italic);
 
 * {
 	margin: 0;
@@ -339,4 +340,50 @@
 	font-size: 14px;
 	line-height: 20px;
 	color: #999;
+}
+/* Content */
+.content-container {
+	position: relative;
+	padding: 80px 0 80px 200px;
+	background: rgba(6, 9, 12, 0.8);
+}
+.content-container:after {
+	content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background:
+		url(http://www.transparenttextures.com/patterns/cross-stripes.png),
+		url(i/content_bg.png) 0px -20px;
+	z-index: -1;
+}
+.content {
+	width: 730px;
+}
+.content__title {
+	font-size: 26px;
+	text-transform: uppercase;
+	font-family: "Open Sans", sans-serif;
+	color: #ee8129;
+	line-height: 42px;
+}
+.content__sub-title {
+	font-size: 19px;
+	font-style: italic;
+	font-family: "Open Sans", sans-serif;
+	color: #fff;
+	margin: 10px 0;
+}
+.content__list-item {
+	font-size: 16px;
+	font-family: "Open Sans", sans-serif;
+	color: #9d9d9d;
+	line-height: 30px;
+	margin: 20px 0 0 20px;
+	cursor: default;
+}
+.content__list-item:hover {
+	color: #3070a8;
 }
