--- a/lesson_10/sources/style.css
+++ b/lesson_10/sources/style.css
@@ -25,6 +25,34 @@
 .foto-container {
 	display: inline-block;
 	max-width: 1152px;
+	position: relative;
+}
+.foto-container__preview {
+	display: none;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+.foto-container__preview_opened {
+	display: block;
+}
+.foto-container__preview-img {
+	width: 100%;
+}
+.preview__close {
+	position: absolute;
+	top: -20px;
+	right: 20px;
+	font-size: 15px;
+	color: #f6f9f9;
+	background: #25a6f7;
+	padding: 15px;
+	cursor: pointer;
+}
+.preview__close:hover {
+	background: #f74c26;
 }
 .foto-container__item {
 	display: inline-block;
@@ -55,9 +83,10 @@
 	margin: 0 5px;
 	border: 1px solid #fff;
 	border-radius: 2px;
+	cursor: pointer;
 }
 .foto-container__link:hover {
-	background: #25A6F7;
+	background: #25a6f7;
 }
 .foto-container__img {
 	width: 360px;
