Added prices section

--- a/advanced/sources/stylesheets/common.scss
+++ b/advanced/sources/stylesheets/common.scss
@@ -7,6 +7,12 @@
 a {
 	text-decoration: none;
 }
+ul {
+	list-style: none;
+}
+button {
+	outline: none;
+}
 .content {
 	width: $content-width;
 	height: 100%;
