--- a/advanced/sources/stylesheets/variables.scss
+++ b/advanced/sources/stylesheets/variables.scss
@@ -5,6 +5,10 @@ $blue-main-color: #4bcaff;
 $gray-color:#838383;
 $light-gray-color: #f9f9f9;
 $dark-gray-color: #414042;
+$medium-gray-color: #d7d7d7;
+$green-color: #91c46b;
+$blue-color: #4bcaff;
+$orange-color: #fd7c00;
 
 $droid-font: 'Droid Sans', sans-serif;
 $lato-font: 'Lato', sans-serif;
