--- a/advanced/sources/stylesheets/contact.scss
+++ b/advanced/sources/stylesheets/contact.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .contact {
-	background: url(i/map.png);
+	background: url(i/map.png) no-repeat;
 	padding: 110px 0;
 	font-family: $lato-font;
 	font-weight: 900;
