--- a/advanced/sources/stylesheets/testimonials.scss
+++ b/advanced/sources/stylesheets/testimonials.scss
@@ -6,11 +6,12 @@
 	border-top: 1px solid #e7e7e7;
 
 	&__container {
-		margin: 80px 300px 25px;
+		margin: 35px 300px 25px;
+		padding-top: 45px;
 	}
 
 	&__nav {
-		margin-top: 65px;
+		margin-top: 150px;
 		text-align: center;
 	}
 
@@ -70,6 +71,7 @@
 		top: -10px;
 		left: 25px;
 		z-index: 1;
+		border-radius: 50%;
 	}
 
 	&__description {
