Added navigation scrolling and button to top

--- a/advanced/sources/stylesheets/common.scss
+++ b/advanced/sources/stylesheets/common.scss
@@ -75,3 +75,26 @@ body {
 		}
 	}
 }
+.button-top {
+	width: 60px;
+	height: 60px;
+	font-size: 38px;
+	line-height: 60px;
+	color: #fff;
+	text-align: center;
+	background: rgba(0, 0, 0, .2);
+	border-radius: 50%;
+	cursor: pointer;
+	position: fixed;
+	bottom: 20px;
+	right: 12%;
+	z-index: 1;
+
+	&:hover {
+		background: $blue-main-color;
+	}
+
+	&_hidden {
+		display: none;
+	}
+}
